--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mapify</title>
+    <title>MakeMaps</title>
     <link rel="stylesheet" href="app/styles/leaflet.css" />
   	<link rel="stylesheet" href="app/styles/leaflet.fullscreen.css" />
-    <link rel="stylesheet" href="app/styles/mapify_components.css" />
+    <link rel="stylesheet" href="app/styles/makeMaps_components.css" />
     <link rel="stylesheet" href="app/styles/react-select.css"/>
     <link rel="stylesheet" href="app/styles/react-slider.css"/>
     <link rel="stylesheet" href="app/styles/impromptu/css/impromptu.css"/>
@@ -16,7 +16,7 @@
     <script src="ext_js/FileSaver/FileSaver.min.js"></script>
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
       <div id="content" />
-      <script src="release/Mapify.js" type="text/javascript"></script>
+      <script src="release/MakeMaps.js" type="text/javascript"></script>
 
   </body>
 </html>
