--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   </head>
   <body>
+    <script src="ext_js/FileSaver/FileSaver.min.js" type="text/javascript"></script>
       <div id="content" />
       <script src="release/MakeMaps.js" type="text/javascript"></script>
   </body>
