Initial function for symbol clurstering

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="app/styles/react-slider.css"/>
     <link rel="stylesheet" href="app/styles/font_awesome/font-awesome.min.css"/>
     <link rel="stylesheet" href="app/styles/leaflet.extra-markers.css"/>
+    <link rel="stylesheet" href="app/styles/MarkerCluster.css"/>
+    <link rel="stylesheet" href="app/styles/MarkerCluster.Default.css"/>
     <script src="ext_js/leaflet-shapefile/shp.js" type="text/javascript"></script>
     <script src="ext_js/FileSaver/FileSaver.min.js" type="text/javascript"></script>
 
