--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <meta charset="utf-8">
     <title>MakeMaps</title>
+
+    <meta name="description" content="Turn your data into beautiful maps. Simple, free, open">
+    <link rel="shortcut icon" type="image/png" href="app/images/favicon.png"/>
+    <meta name="keywords" content="Map, Maps, GIS, Visualization">
+
     <link rel="stylesheet" href="app/styles/leaflet.css" />
   	<link rel="stylesheet" href="app/styles/leaflet.fullscreen.css" />
     <link rel="stylesheet" href="app/styles/makeMaps_components.css" />
