--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" type="image/png" href="app/images/favicon.png"/>
     <meta name="keywords" content="Map, Maps, GIS, Visualization">
 
+    <link rel="stylesheet" href="app/styles/fonts/DejaVuSans-Book.css" />
+    <link rel="stylesheet" href="app/styles/fonts/DejaVuSans-ExtraLight.css" />
     <link rel="stylesheet" href="app/styles/leaflet.css" />
   	<link rel="stylesheet" href="app/styles/leaflet.fullscreen.css" />
     <link rel="stylesheet" href="app/styles/makeMaps_components.css" />
