Added https redirect to index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
   <head>
     <meta charset="utf-8">
     <title>MakeMaps</title>
+	<script type="text/javascript">
+		var host = "makemaps.online";
+		if ((host == window.location.host) && (window.location.protocol != "https:"))
+		    window.location.protocol = "https";
+	</script>
 
     <meta name="description" content="Turn your data into beautiful maps. Simple, free, open">
     <link rel="shortcut icon" type="image/png" href="app/images/favicon.png"/>
