Added language selection to welcome screen

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="app/styles/leaflet.extra-markers.css"/>
     <link rel="stylesheet" href="app/styles/MarkerCluster.css"/>
     <link rel="stylesheet" href="app/styles/2-double-bounce.css"/>
+    <link rel="stylesheet" href="app/styles/flags32.css" />
     <script src="ext_js/FileSaver/FileSaver.min.js" type="text/javascript"></script>
 
   </head>
