Added language selection to welcome screen

--- a/index.html
+++ b/index.html
@@ -2,11 +2,6 @@
   <head>
     <meta charset="utf-8">
     <title>MakeMaps</title>
-	<script type="text/javascript">
-		var host = "makemaps.online";
-		if ((host == window.location.host) && (window.location.protocol != "https:"))
-		    window.location.protocol = "https";
-	</script>
 
     <meta name="description" content="Turn your data into beautiful maps. Simple, free, open">
     <link rel="shortcut icon" type="image/png" href="app/images/favicon.png"/>
@@ -23,6 +18,7 @@
     <link rel="stylesheet" href="app/styles/leaflet.extra-markers.css"/>
     <link rel="stylesheet" href="app/styles/MarkerCluster.css"/>
     <link rel="stylesheet" href="app/styles/2-double-bounce.css"/>
+    <link rel="stylesheet" href="app/styles/flags32.css" />
     <script src="ext_js/FileSaver/FileSaver.min.js" type="text/javascript"></script>
 
   </head>
