Moved css handling to js from html to make integrations easier

--- a/index.html
+++ b/index.html
@@ -4,21 +4,8 @@
     <title>MakeMaps</title>
 
     <meta name="description" content="Turn your data into beautiful maps. Simple, free, open">
-    <link rel="shortcut icon" type="image/png" href="app/images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <meta name="keywords" content="Map, Maps, GIS, Visualization">
-
-    <link rel="stylesheet" href="app/styles/fonts/DejaVuSans-Book.css" />
-    <link rel="stylesheet" href="app/styles/fonts/DejaVuSans-ExtraLight.css" />
-    <link rel="stylesheet" href="app/styles/leaflet.css" />
-  	<link rel="stylesheet" href="app/styles/leaflet.fullscreen.css" />
-    <link rel="stylesheet" href="app/styles/makeMaps_components.css" />
-    <link rel="stylesheet" href="app/styles/react-select.css"/>
-    <link rel="stylesheet" href="app/styles/react-slider.css"/>
-    <link rel="stylesheet" href="app/styles/font_awesome/font-awesome.min.css"/>
-    <link rel="stylesheet" href="app/styles/leaflet.extra-markers.css"/>
-    <link rel="stylesheet" href="app/styles/MarkerCluster.css"/>
-    <link rel="stylesheet" href="app/styles/2-double-bounce.css"/>
-    <link rel="stylesheet" href="app/styles/flags32.css" />
     <script src="ext_js/FileSaver/FileSaver.min.js" type="text/javascript"></script>
 
   </head>
