--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <meta name="keywords" content="Map, Maps, GIS, Visualization">
     <script src="ext_js/FileSaver/FileSaver.min.js" type="text/javascript"></script>
+    <script src="ext_js/JSZip/jszip.min.js" type="text/javascript"></script>
 
   </head>
   <body>
